2003-03-27  Derek Price  <derek@ximbiot.com>

	* lib/autotest/general.m4: Define and use new diversions in preparation
	for accepting new arguments and allowing scripting around tests.

2003-03-26  Derek Price  <derek@ximbiot.com>

	* lib/autoconf/general.m4 (AC_ARG_VAR): Use AS_HELP_STRING instead of
	obsolete AC_HELP_STRING.
	(AC_HELP_STRING): AU_DEFUN to...
	* lib/m4sugar/m4sh.m4 (AS_HELP_STRING): ...here.
	* tests/m4sh.at (AS_HELP_STRING): New test.

	* tests/acgeneral.at: Regenerated.

2003-03-26  Derek Price  <derek@ximbiot.com>

	* lib/autotest/general.m4: s/DEFAULT/DEFAULTS/ since it makes more
	sense.  Verbosify the diversion definitions comment.

2003-03-26  Derek Price  <derek@ximbiot.com>

	* lib/autotest/general.m4 (AT_INIT): Remove redundant call to
	AS_PREPARE.

2003-03-21  Eric Siegerman  <eric_97@pobox.com>

	* doc/autoconf.texi (Present But Cannot Be Compiled):
	Grammar fixes and minor rewording. (trivial change)

2003-03-06  Paul Eggert  <eggert@twinsun.com>

	Work around a problem noted by Nelson H. F. Beebe with coreutils
	4.5.9: Sun c89 (Sun WorkShop 6 update 2 C 5.3 Patch 111679-08
	2002/05/09) rejects '#line 32768 "configure"' because the line
	number overflows.
	* lib/autoconf/c.m4 (AC_LANG_SOURCE(C)): Do not generate
	#line directives.
	* lib/autoconf/lang.m4 (AC_LANG_SOURCE): Fix comment to match this.
	* doc/autoconf.texi (Generating Sources): Document this.

2003-03-01  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* tests/atspecific.m4 (AT_CHECK_AUTOM4TE): Normalize
	file name for the m4 program, when it has an "exe" file extension.
	DJGPP's error messages include the error code in brackets -
	remove the error code during normalization.

2003-02-28  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Present But Cannot Be Compiled): New.

2003-02-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/autoconf.texi (Limitations of Make): Remove the section
	about `$<' in inference rules, it was a bogus interpretation of